--- a/oblig.html
+++ b/oblig.html
@@ -6,6 +6,8 @@
         </header>
     <main>
         <h1>Skoler</h1>
+
+        <strong>Elvebakken vgs</strong>
     </main>        
     </body>
 </html>
