--- a/oblig.html
+++ b/oblig.html
@@ -6,6 +6,10 @@
         </header>
     <main>
         <h1>Skoler</h1>
+         <p> <strong>Mailand vidregående</strong></p>
+        <p> Mailand vidregående ligger i Lørenskog. Skolen tilbyr utdanning innen flere fagområder. 
+            Dette inkluderer studiespesialisering, 
+            yrkesfag og voksenopplæring.</p>
     </main>        
     </body>
 </html>
