--- a/oblig.html
+++ b/oblig.html
@@ -8,6 +8,12 @@
         <h1>Skoler</h1>
 
         <strong>Elvebakken vgs</strong>
+
+
+
+
+        <strong>Kuben vgs</strong>
+
     </main>        
     </body>
 </html>
