--- a/oblig.html
+++ b/oblig.html
@@ -8,6 +8,9 @@
         <h1>Skoler</h1>
 
         <strong>Elvebakken vgs</strong>
+        <p>Elvabekken videregående skole er en skole med 1400 elever, som ligger på Grünerløkka. Den tilbyr linjene 
+            studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, elektro, og it og medieproduksjon. </p>
+
     </main>        
     </body>
 </html>
