--- a/oblig.html
+++ b/oblig.html
@@ -16,8 +16,7 @@
        <strong>Valle Hovin VGS</strong>
       <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
-        gå i 10 minutter. 
-      </p>
+        gå i 10 minutter. </p>
     </main>        
     </body>
 </html>
