--- a/oblig.html
+++ b/oblig.html
@@ -8,6 +8,8 @@
         <h1>Skoler</h1>
 
         <strong>Elvebakken vgs</strong>
+        <p>Elvebakken er en videregående skole med 1400 elever smo ligger på Grünerløkka i Oslo. Den tilbyr linjene 
+            studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro.</p>
 
 
 
