--- a/oblig.html
+++ b/oblig.html
@@ -16,7 +16,9 @@
         <p>Elvebakken er en videregående skole med 1400 elever smo ligger på Grünerløkka i Oslo. Den tilbyr linjene 
             studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro.</p>
 
-
+<strong>Kuben vgs</strong>
+        <p> Kuben er norges største vidergåndeskole i helle Norge, med 1800 elever.
+             </p>
 
         
    
