--- a/oblig.html
+++ b/oblig.html
@@ -14,7 +14,9 @@
 
         <strong>Elvebakken vgs</strong>
         <p>Elvebakken er en videregående skole med 1400 elever smo ligger på Grünerløkka i Oslo. Den tilbyr linjene 
-            studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro.</p>
+        studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro. Det 
+        nærmeste tbanestoppet er jernbanetorget, men det går også en buss som stopper rett utenfor skolen. Elvebakken ligger
+        rett ved siden av Akerselva og kulturkirka Jakob.</p>
 
 <strong>Kuben vgs</strong>
         <p> Kuben er norges største vidergåndeskole i helle Norge, med 1800 elever.
