--- a/oblig.html
+++ b/oblig.html
@@ -17,8 +17,10 @@
             studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro.</p>
 
 <strong>Kuben vgs</strong>
-        <p> Kuben er norges største vidergåndeskole i helle Norge, med 1800 elever.
-             </p>
+        <p> Kuben er Norges største videregående skole, med rundt 1800 elever.
+           Skolen tilbyr linjer som studiespesialisering med fordypning i realfag eller SSØ, bygg- og anleggsteknikk, 
+           elektro og datateknologi, teknologi- og industrifag, helse- og oppvekstfag, informasjonsteknologi og medieproduksjon, 
+           og til slutt yrkes- og studiekompetanse.  </p>
 
         
    
