--- a/oblig.html
+++ b/oblig.html
@@ -27,7 +27,7 @@
         
 
       
-       <strong>Valle Hovin VGS</strong>
+       <h2>Valle Hovin VGS<h2>
       <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
