--- a/oblig.html
+++ b/oblig.html
@@ -18,11 +18,12 @@
         nærmeste tbanestoppet er jernbanetorget, men det går også en buss som stopper rett utenfor skolen. Elvebakken ligger
         rett ved siden av Akerselva og kulturkirka Jakob.</p>
 
-<strong>Kuben vgs</strong>
+        <h2>Kuben vgs</h2>
         <p> Kuben er Norges største videregående skole, med rundt 1800 elever.
            Skolen tilbyr linjer som studiespesialisering med fordypning i realfag eller SSØ, bygg- og anleggsteknikk, 
-           elektro og datateknologi, teknologi- og industrifag, helse- og oppvekstfag, informasjonsteknologi og medieproduksjon, 
-           og til slutt yrkes- og studiekompetanse.  </p>
+           elektro og datateknologi, teknologi- og industrifag, helse- og oppvekstfag, informasjonsteknologi og 
+           medieproduksjon, og til slutt yrkes- og studiekompetanse. </p>
+        <a href ="https://kuben.vgs.no/" target="_blank">Nettsiden til Kuben vgs.</a>
 
         
 
