--- a/oblig.html
+++ b/oblig.html
@@ -17,6 +17,7 @@
         studiespesialisering, kunst design og arkitektur, medier og kommunikasjon, IT og medieproduksjon og elektro. Det 
         nærmeste tbanestoppet er jernbanetorget, men det går også en buss som stopper rett utenfor skolen. Elvebakken ligger
         rett ved siden av Akerselva og kulturkirka Jakob.</p>
+        <a href ="https://elvebakken.vgs.no/" target="_blank">Nettsiden til Elvebakken vgs</a>
 
         <h2>Kuben vgs</h2>
         <p> Kuben er Norges største videregående skole, med rundt 1800 elever.
