--- a/oblig.html
+++ b/oblig.html
@@ -7,10 +7,14 @@
     <main>
         <h1>Skoler</h1>
 
-         <p> <strong>Mailand vidregående</strong></p>
+         <h2>Mailand vidregående</h2>
         <p> Mailand vidregående ligger i Lørenskog. Skolen tilbyr utdanning innen flere fagområder. 
             Dette inkluderer studiespesialisering, 
             yrkesfag og voksenopplæring.</p>
+            <p>
+        <a href="https://afk.no/mailand-vgs/">
+            nettsiden til Mailand VGS </a>
+          </p>
 
         <strong>Elvebakken vgs</strong>
         <p>Elvebakken er en videregående skole med 1400 elever smo ligger på Grünerløkka i Oslo. Den tilbyr linjene 
