--- a/oblig.html
+++ b/oblig.html
@@ -13,7 +13,7 @@
             yrkesfag og voksenopplæring.</p>
             <p>
         <a href="https://afk.no/mailand-vgs/">
-            nettsiden til Mailand VGS </a>
+            Nettsiden til Mailand VGS </a>
           </p>
 
         <strong>Elvebakken vgs</strong>
