--- a/oblig.html
+++ b/oblig.html
@@ -30,7 +30,7 @@
            medieproduksjon, og til slutt yrkes- og studiekompetanse. </p>
         <a href ="https://kuben.vgs.no/" target="_blank">Nettsiden til Kuben vgs</a>
       
-       <h2>Valle Hovin VGS<h2>
+       <h2>Valle Hovin VGS</h2>
       <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
