--- a/oblig.html
+++ b/oblig.html
@@ -11,10 +11,9 @@
         <p> Mailand vidregående ligger i Lørenskog. Skolen tilbyr utdanning innen flere fagområder. 
             Dette inkluderer studiespesialisering, 
             yrkesfag og voksenopplæring.</p>
-            <p>
-        <a href="https://afk.no/mailand-vgs/">
-            Nettsiden til Mailand VGS </a>
-          </p>
+            
+        <a href="https://afk.no/mailand-vgs/" target="_blank"> Nettsiden til Mailand VGS </a>
+          
 
         <h2>Elvebakken vgs</h2>
         <p>Elvebakken er en videregående skole med 1400 elever smo ligger på Grünerløkka i Oslo. Den tilbyr linjene 
