--- a/oblig.html
+++ b/oblig.html
@@ -33,6 +33,7 @@
       <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
+        <a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a>
         
     </main>        
     </body>
