--- a/oblig.html
+++ b/oblig.html
@@ -33,7 +33,10 @@
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
         <a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a>
+        <p> </p>
         
+        <img src="media/Bebro1525Commits.png" width="500"/>
+
     </main>        
     </body>
 </html>
