--- a/oblig.html
+++ b/oblig.html
@@ -37,6 +37,8 @@
         
         <img src="media/Bebro1525Commits.png" width="500"/>
 
+        <img src="media/Bebro1525.png" width="500"/>
+
     </main>        
     </body>
 </html>
