--- a/oblig.html
+++ b/oblig.html
@@ -39,6 +39,10 @@
 
         <img src="media/Bebro1525.png" width="300"/>
 
+        <img src="media/iskaa06.png" width="300"/>
+
+        <img src="media/commits. iskaa06.jpeg" width="300"/>
+
     </main>        
     </body>
 </html>
