--- a/oblig.html
+++ b/oblig.html
@@ -42,6 +42,14 @@
         <img src="media/maat5405 Koden.png" width="500"/>
         <img src="media/maatc5405 commits .png" width="500"/>
 
+
+
+
+
+
+
+        <img src="media/78-nour-78 commits.jpeg"widht="300"/>
+
     </main>        
     </body>
 </html>
