--- a/oblig.html
+++ b/oblig.html
@@ -36,13 +36,12 @@
         <p> </p>
         
         <img src="media/Bebro1525Commits.png" width="500"/>
-
         <img src="media/Bebro1525.png" width="500"/>
 
         <img src="media/maat5405 Koden.png" width="500"/>
         <img src="media/maatc5405 commits .png" width="500"/>
 
-        <img src="media/78-nour-78 commits.jpeg"widht="300"/>
+        <img src="media/78-nour-78 commits.jpeg"width="300"/>
         <img src="media/iskaa06.png" width="300"/>
         <img src="media/commits. iskaa06.jpeg" width="300"/>
 
