--- a/oblig.html
+++ b/oblig.html
@@ -35,6 +35,7 @@
         <a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a>
         <p> </p>
         
+        <h3>Bebro1525</h3>
         <img src="media/Bebro1525Commits.png" width="500"/>
         <img src="media/Bebro1525.png" width="500"/>
 
