--- a/oblig.html
+++ b/oblig.html
@@ -42,8 +42,8 @@
         <img src="media/maat5405 Koden.png" width="500"/>
         <img src="media/maatc5405 commits .png" width="500"/>
 
-        <img src="media/78-nour-78 commits.jpeg"widht="500"/>
-        <img src="media/78-nour-78 koden.jpeg"widht="500"/>
+        <img src="media/78-nour-78 commits.jpeg"width="500"/>
+        <img src="media/78-nour-78 koden.jpeg"width="500"/>
 
 
         <img src="media/iskaa06.png" width="300"/>
