--- a/oblig.html
+++ b/oblig.html
@@ -39,7 +39,7 @@
         <img src="media/Bebro1525Commits.png" width="500"/>
         <img src="media/Bebro1525.png" width="500"/>
 
-        <img src="media/maat5405 Koden.png" width="500"/>
+        <img src="media/maat5405 Koden.png" width="500" alt="maat5405 Koden"/>
         <img src="media/maatc5405 commits .png" width="500"/>
 
         <img src="media/78-nour-78 commits.jpeg"widht="500"/>
