--- a/oblig.html
+++ b/oblig.html
@@ -44,13 +44,13 @@
 
 
 
-
-
-
-
         <img src="media/78-nour-78 commits.jpeg"widht="300"/>
+
+        <h3>iskaa06</h3>
         <img src="media/iskaa06.png" width="500"/>
         <img src="media/commits. iskaa06.jpeg" width="500"/>
+
+
         <img src="media/78-nour-78 commits.jpeg"widht="500"/>
         <img src="media/78-nour-78 koden.jpeg"widht="500"/>
 
