--- a/oblig.html
+++ b/oblig.html
@@ -31,9 +31,8 @@
       <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
-        <a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a>
-        <p> </p>
-        
+        <p><a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a></p>
+       
         <h3>Bebro1525</h3>
         <img src="media/Bebro1525Commits.png" width="500"/>
         <img src="media/Bebro1525.png" width="500"/>
