--- a/oblig.html
+++ b/oblig.html
@@ -38,7 +38,7 @@
         <img src="media/Bebro1525.png" width="500"/>
 
         <img src="media/maat5405 Koden.png" width="500" alt="maat5405 Koden"/>
-        <img src="media/maatc5405 commits .png" width="500"/>
+        <img src="media/maatc5405 commits .png" width="500" alt="maatc5405 commits"/>
 
 
         <h3>78-nour-78</h3>
