--- a/oblig.html
+++ b/oblig.html
@@ -55,6 +55,9 @@
         <img src="media/iskaa06.png" width="500"/>
         <img src="media/commits. iskaa06.jpeg" width="500"/>
 
+        <h3>FossilsL</h3>
+        
+
 
     </main>        
     </body>
