--- a/oblig.html
+++ b/oblig.html
@@ -30,13 +30,13 @@
        <p> Valle Hovin er en videregående skole som tilbyr vanlig studiespesialisering og
         studiespesialisering med toppidrett. For å komme seg dit må man gå av på Helsfyr og 
         gå i 10 minutter. </p>
-        <p><a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a></p>
+        <a href="https://vallehovin.vgs.no/" target="_blank"> Nettsiden til Valle Hovin VGS</a>
 
         <h2>Ås Vgs</h2>
         <p>Ås videregående skole er en skole som ligger omtrent 20 minutter unna oslo med tog. 
             Skolen tilbyr en stor variasjon av linjer som man kan gå. noen eksempler på linjer er
             studiespesialering, toppidrett, fbie, kunst design og arkitektur og elektro.</p>
-        <p><a href="https://afk.no/aas-vgs/" target="_blank"> Nettsiden til Ås vgs</a></p>
+        <a href="https://afk.no/aas-vgs/" target="_blank"> Nettsiden til Ås vgs</a>
         
        
         <h3>Bebro1525</h3>
