--- a/oblig.html
+++ b/oblig.html
@@ -6,7 +6,7 @@
     <main>
         <h1>Skoler</h1>
 
-        <h2>mailand Vidregående</h2>
+        <h2>Mailand Vidregående</h2>
         <p> Mailand vidregående ligger i Lørenskog. Skolen tilbyr utdanning innen flere fagområder. 
             Dette inkluderer studiespesialisering, 
             yrkesfag og voksenopplæring.</p>
