--- a/oblig.html
+++ b/oblig.html
@@ -19,7 +19,7 @@
         rett ved siden av Akerselva og kulturkirka Jakob.</p>
         <a href ="https://elvebakken.vgs.no/" target="_blank">Nettsiden til Elvebakken vgs</a>
 
-        <h2>Kuben Vgs</h2>
+        <h2>Kuben VGS</h2>
         <p> Kuben er Norges største videregående skole, med rundt 1800 elever.
            Skolen tilbyr linjer som studiespesialisering med fordypning i realfag eller SSØ, bygg- og anleggsteknikk, 
            elektro og datateknologi, teknologi- og industrifag, helse- og oppvekstfag, informasjonsteknologi og 
