--- a/oblig.html
+++ b/oblig.html
@@ -45,7 +45,7 @@
 
         <h3>maat5405</h3>
         <img src="media/maat5405 Koden.png" width="500"/>
-        <img src="media/maatc5405 commits .png" width="500"/>
+        <img src="media/maatc5405 Group commits.png" width="500"/>
 
         <h3>78-nour-78</h3>
         <img src="media/78-nour-78-  commits github.com.jpeg"width="500"/>
