--- a/oblig.html
+++ b/oblig.html
@@ -44,7 +44,7 @@
         <img src="media/Bebro1525Commits.png" width="500"/>
 
         <h3>maat5405</h3>
-        <img src="media/maat5405 Koden.png" width="500"/>
+        <img src="media/maatc5405 Koden.png" width="500"/>
         <img src="media/maatc5405 Group commits.png" width="500"/>
 
         <h3>78-nour-78</h3>
