--- a/oblig.html
+++ b/oblig.html
@@ -48,7 +48,7 @@
         <img src="media/maatc5405 Group commits.png" width="500"/>
 
         <h3>78-nour-78</h3>
-        <img src=""width="500"/>
+        <img src="media/78-nour-78-  commits github.com.jpeg"width="500"/>
         <img src="media/78-nour-78 koden.jpeg"width="600"/>
 
         <h3>iskaa06</h3>
