--- a/oblig.html
+++ b/oblig.html
@@ -53,7 +53,7 @@
 
         <h3>iskaa06</h3>
         <img src="media/iskaa06.png" width="500"/>
-        <img src="media/commits. iskaa06.jpeg" width="500"/>
+        <img src="media/iskaa06 commits.jpeg" width="500"/>
 
         <h3>FossilsL</h3>
         <img src="media/FossilsLKoden.png" width="500"/>
