ny link til bilde

--- a/oblig.html
+++ b/oblig.html
@@ -49,7 +49,7 @@
 
         <h3>78-nour-78</h3>
         <img src="media/78-nour-78-  commits github.com.jpeg"width="500"/>
-        <img src="media/78-nour-78 koden.jpeg"width="600"/>
+        <img src="media/78-nour-78 koden (2).jpeg"width="600"/>
 
         <h3>iskaa06</h3>
         <img src="media/iskaa06.png" width="500"/>
